# male

./: Cargo.toml
src/: band.rs  lib.rs
src/beat/: beat.rs  mod.rs  state.rs
src/onset/: mod.rs  onset.rs  peak.rs  spectral_flux.rs  threshold.rs
src/util/: mod.rs  ring.rs
src/window/: channels.rs  filter.rs  mod.rs  window.rs
